@@ -6,10 +6,12 @@ man8_MANS=pdns/docs/pdns_control.8 pdns/docs/pdns_server.8 pdns/docs/zone2sql.8
 
 install-exec-local: 
 	-@chmod +x pdns/pdns
+	-@chmod +x pdns/precursor
 	@echo "***********************************************************"
 	@echo
-	@echo An init.d startup script has been made for you in pdns/pdns
-	@echo You may want to copy it to /etc/init.d or equivalent
+	@echo init.d startup scripts have been made for you in pdns/pdns
+	@echo and in pdns/precursor
+	@echo You may want to copy these to /etc/init.d or equivalent
 	@echo
 	@echo "***********************************************************"
 
